--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
   },
-  "homepage": "https://yourusername.github.io/your-repo-name"
+  "homepage": "https://sttsspjy.github.io/myIdCard/"
 }
